Fixed problem with appearing horizontal scroll on two blocks

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ img {
   padding-bottom: 92px;
 }
 .section-title {
-  margin: 0;
+  /* margin: auto; */
   margin-bottom: 84px;
   font-weight: bold;
   font-size: 36px;
@@ -309,6 +309,7 @@ img {
     width: 300px;
     height: 300px;
     border-width: 10px;
+    background-position: center top -50px;
   }
 }
 @media (max-width: 836px) {
@@ -320,7 +321,7 @@ img {
     width: 230px;
     height: 230px;
     border-width: 6px;
-    background-position: center top -50px;
+    background-position: center top -40px;
     margin-bottom: 17px;
   }
   .hero {
